--- a/Logitec/WebContent/index.html
+++ b/Logitec/WebContent/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>LogiTec</title>
@@ -15,14 +15,7 @@
 <script src="js/bootstrap.min.js"></script>
 
 
-<script>
-$(document).ready(function(){
-    $("button").click(function(){
-        $("#div1").load("demo_test.txt");
-        $( "#new-projects" ).load( "/pages/cliente/cliente_adicionar.html" );
-    });
-});
-</script>
+
 
 </head>
 <body>
@@ -57,7 +50,7 @@ $(document).ready(function(){
 				<div class="panel-heading">
 					<img src="icon/frete_64.png" alt="Cinque Terre" width="64" height="64">
 
-					<a href="pages/cliente/cliente_adicionar.html" target="#"><h5>Fretes em Aberto</h5> </a>
+					<a href="pages/cliente/cliente_adicionar.html" target="#teste"><h5>Fretes em Aberto</h5> </a>
 				</div>
 
 			</div>
@@ -104,11 +97,45 @@ $(document).ready(function(){
 			</form>
 		</div>
 	</div>
+	
+	<div class="container">
+  <h2>Horizontal form</h2>
+  <form class="form-horizontal" role="form">
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="email">Email:</label>
+      <div class="col-sm-10">
+        <input type="email" class="form-control" id="email" placeholder="Enter email">
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="pwd">Password:</label>
+      <div class="col-sm-10">          
+        <input type="password" class="form-control" id="pwd" placeholder="Enter password">
+      </div>
+    </div>
+    <div class="form-group">        
+      <div class="col-sm-offset-2 col-sm-10">
+        <div class="checkbox">
+          <label><input type="checkbox"> Remember me</label>
+        </div>
+      </div>
+    </div>
+    <div class="form-group">        
+      <div class="col-sm-offset-2 col-sm-10">
+        <button type="submit" class="btn btn-default">Submit</button>
+      </div>
+    </div>
+  </form>
+</div>
 <b>Projects:</b>
 <div id="new-projects"></div>
  
 <script>
 jQuery(document).ready(function(){
+	jQuery( "#new-projects" ).load( "pages/cliente/cliente_adicionar.html" );
+});
+
+$("#tp_pessoa_fisica").click(function() {
 	jQuery( "#new-projects" ).load( "pages/cliente/cliente_adicionar.html" );
 });
 
