--- a/Logitec/WebContent/pages/cliente/cliente_adicionar.html
+++ b/Logitec/WebContent/pages/cliente/cliente_adicionar.html
@@ -1,26 +1,97 @@
 
-	<div class="container">
-		<div class="row">
-			<form>
-				<div class="controls">
-					<label>Nome completo:</label> <input type="text" class="form-control" size="20px" id="name" required data-validation-required-message="Please enter your name.">
-					<p class="help-block"></p>
-
-					<label>tipo pessoa:</label> <input type="text" class="form-control" id="name" required data-validation-required-message="Please enter your name.">
-					<p class="help-block"></p>
-
-					<label>data:</label> <input type="text" class="form-control" id="name" required data-validation-required-message="Please enter your name.">
-					<p class="help-block"></p>
-
-					<label>cnpj:</label> <input type="text" class="form-control" id="name" required data-validation-required-message="Please enter your name.">
-					<p class="help-block"></p>
-				</div>
-				<div id="success"></div>
-				<!-- For success/fail messages -->
-				<button type="reset" class="btn btn-default">Cancelar</button>
-				<button type="submit" class="btn btn-primary">Salvar</button>
-
-
-			</form>
+<div class="container">
+	<h2>Cadastrar Clientes</h2>
+	<form class="form-horizontal" role="form">
+		<div class="form-group">
+			<label class="control-label col-sm-2" for="nome">Nome:</label>
+			<div class="col-sm-6">
+				<input type="text" class="form-control" id="nome">
+			</div>
 		</div>
-	</div>
+		<div class="form-group">
+			<label class="control-label col-sm-2" for="endereco">Endereço:</label>
+			<div class="col-sm-6">
+				<input type="text" class="form-control" id="endereco">
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="control-label col-sm-2" for="telefone">Telefone:</label>
+			<div class="col-sm-6">
+				<input type="tel" class="form-control" id="telefone">
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="control-label col-sm-2" for="email">E-mail:</label>
+			<div class="col-sm-10">
+				<input type="email" class="form-control" id="email">
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="control-label col-sm-2" for="dataCad">Data Cadastro:</label>
+			<div class="col-sm-10">
+				<input type="date" class="form-control" id="dataCad">
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="control-label col-sm-2" for="tipoPessoa">Tipo Pessoa:</label>
+			<div class="col-sm-10">
+				<label for="male">Fisica</label> <input type="radio" name="tipoPessoa" id="tp_pessoa_fisica" value="F" checked> <label for="female">Juridica</label> <input type="radio" name="tipoPessoa"
+					id="tp_pessoa_juridica" value="J">
+			</div>
+		</div>
+
+		<!-- dados para pessoa juridica -->
+		<div id="dados_pessoa_juridica">
+			<div class="form-group">
+				<label class="control-label col-sm-2" for="cnpj">CNPJ:</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" id="cnpj">
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="control-label col-sm-2" for="inscEst">Inscrição Estadual:</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" id="inscEst">
+				</div>
+			</div>
+		</div>
+		<!-- dados para pessoa fisica -->
+		<div id="dados_pessoa_fisica">
+			<div class="form-group">
+				<label class="control-label col-sm-2" for="cpf">CPF:</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" id="cpf">
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="control-label col-sm-2" for="rg">RG:</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" id="rg">
+				</div>
+			</div>
+		</div>
+		<div class="form-group">
+			<div class="col-sm-offset-2 col-sm-10">
+				<button type="button" class="btn btn-default">Limpar</button>
+				<button type="submit" class="btn btn-primary">Enviar</button>
+			</div>
+		</div>
+	</form>
+</div>
+
+
+
+<script>
+	$("#tp_pessoa_fisica").click(function() {
+		//alert("pessoa fisica");
+		$("#dados_pessoa_fisica").show(1000);
+		$("#dados_pessoa_juridica").hide(1000);
+	});
+
+	$("#tp_pessoa_juridica").click(function() {
+		//alert("pessoa juridica.");
+		$("#dados_pessoa_juridica").show(1000);
+		$("#dados_pessoa_fisica").hide(1000);
+	});
+	
+</script>
