--- a/Logitec/WebContent/pages/cliente/cliente.html
+++ b/Logitec/WebContent/pages/cliente/cliente.html
@@ -88,6 +88,9 @@
 
 
 <script>
+$( document ).ready(function() {
+	$("#dados_pessoa_juridica").hide();
+});
 	$("#tp_pessoa_fisica").click(function() {
 		//alert("pessoa fisica");
 		$("#dados_pessoa_fisica").show(1000);
